--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8080/api/plants
-REACT_APP_USER_API_URL=http://localhost:8080/api/users
+REACT_APP_API_URL=https://venomous-plant-fb14f0407ddd.herokuapp.com/api/plants
+REACT_APP_USER_API_URL=https://venomous-plant-fb14f0407ddd.herokuapp.com/api/users
